correction visibility

--- a/styles/style.css
+++ b/styles/style.css
@@ -163,14 +163,16 @@ text:hover{
     background: #fff;
     box-shadow: 0 2px 2px rgba(0,0,0,0.2), 0 0 4px rgba(0,0,0,0.2);
     left: 80px;
-    transition: 0.3s transform,0.2s opacity;
+    transition: 0.3s ,0.2s opacity;
     transform:translateX(-110%);
     opacity: 0;
+    visibility: hidden;
     will-change: transform;
 }
 #menuBox.open{
     transform:translateX(0%);
     opacity: 1;
+    visibility: visible;
 }
 .menu-item{
     font-family: roboto;
